--- a/src/containers/StartupProjects/StartupProjects.scss
+++ b/src/containers/StartupProjects/StartupProjects.scss
@@ -5,6 +5,11 @@
   height: auto;
   width: 250px;
 }
+
+.card-image-large {
+  width: 340px;
+  margin-top: 0;
+}
 .card-title {
   color: $titleColor;
   font-size: 22px;
@@ -22,8 +27,10 @@
   flex-direction: column;
   background-color: $lightBackground2;
   padding: 1.5rem;
+  gap: 0.75rem;
   border-radius: 10px;
   border: 1px solid $lightBorder1;
+  overflow: hidden;
   justify-content: center;
 }
 .project-card-light {
@@ -43,6 +50,14 @@
 .project-detail {
   text-align: center;
 }
+
+.project-detail-large {
+  margin-top: 1.4rem;
+}
+
+.project-detail-large .card-title {
+  margin-top: 0;
+}
 .project-card-light:hover {
   box-shadow: $lightBoxShadowDark 0px 20px 30px -10px;
 }
@@ -56,6 +71,36 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.project-image-large {
+  height: auto;
+  overflow: hidden;
+  align-items: flex-start;
+}
+
+.project-card-large {
+  padding-top: 1.1rem;
+}
+
+.project-card-large .project-image-large {
+  position: relative;
+  top: -10px;
+}
+
+@media (max-width: 768px) {
+  .card-image-large {
+    width: 280px;
+    margin-top: 0;
+  }
+
+  .project-detail-large {
+    margin-top: 0;
+  }
+
+  .project-card-large .project-image-large {
+    top: 0;
+  }
 }
 
 .projects-container {
