--- a/src/containers/achievement/Achievement.scss
+++ b/src/containers/achievement/Achievement.scss
@@ -9,6 +9,7 @@
 .achievement-subtitle {
   text-transform: uppercase;
   margin: 0px;
+  margin-top: 0.75rem;
   margin-bottom: 50px;
 }
 .subTitle {
