--- a/src/components/experienceCard/ExperienceCard.scss
+++ b/src/components/experienceCard/ExperienceCard.scss
@@ -1,156 +1,83 @@
 @import "../../_globalColor";
 
 .experience-card {
-  position: relative;
   background-color: $lightBackground2;
-  box-shadow: $lightBoxShadowDark 0px 10px 30px -15px;
   border-radius: 10px;
-  border: 1px solid $lightBorder1;
-}
-
-.experience-card-dark {
-  position: relative;
-  background-color: $darkBackground;
   box-shadow: $lightBoxShadowDark 0px 10px 30px -15px;
-  border-radius: 10px;
-  border: 1px solid $lightBorder1;
+  padding: 1.5rem;
+  transition: all 0.3s ease;
 }
 
 .experience-card:hover {
   box-shadow: $lightBoxShadowDark 0px 20px 30px -10px;
 }
 
-.experience-banner {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 150%;
-  background: $experienceCardBannerLG;
-  border-radius: 10px 10px 0px 0px;
-  -webkit-filter: blur(0px);
-  -moz-filter: blur(0px);
-  -o-filter: blur(0px);
-  -ms-filter: blur(0px);
-  filter: blur(0px);
-  height: 11rem;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
+.experience-card-dark {
+  background-color: $darkBackground;
+  color: $textColorDark;
 }
 
-.experience-blurred_div {
-  position: absolute;
-  background: $experienceCardBlurredDivLG;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-  height: 11rem;
-  top: 0;
-  left: 0;
-  width: 100%;
-  border-radius: 10px 10px 0px 0px;
-}
-
-.experience-div-company {
-  position: absolute;
-  background: transparent;
-  height: 9rem;
-  top: 0;
-  left: 0;
-  width: 100%;
+.experience-card-header {
   display: flex;
+  gap: 1rem;
   align-items: center;
-  justify-content: center;
 }
 
-.experience-text-company {
-  text-align: center;
-  padding: 1.5rem;
+.experience-card-logo {
+  width: 56px;
+  height: 56px;
+  border-radius: 10px;
+  object-fit: contain;
+  background-color: $lightBackground1;
+  box-shadow: 0 0.5rem 1rem $lightBoxShadowDarker;
+}
+
+.experience-card-dark .experience-card-logo {
+  background-color: $darkBackground;
+}
+
+.experience-card-header-text {
+  min-width: 0;
+}
+
+.experience-card-role {
   margin: 0;
-  color: $lightBackground1;
-  font-size: 25px;
-  text-align: center;
+  font-size: 22px;
   font-weight: 700;
-  text-overflow: ellipsis;
   overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-.experience-roundedimg {
-  position: absolute;
-  object-fit: cover;
-  left: 0;
-  right: 0;
-  top: 7rem;
-  margin-left: auto;
-  margin-right: auto;
-  width: 8rem;
-  height: 8rem;
-  box-shadow: 0 0.5rem 1rem $lightBoxShadowDarker;
-  border-radius: 50%;
-}
-
-.experience-text-role {
-  text-align: center;
-  color: $textColor;
-  font-weight: 700;
-  font-size: 25px;
-  margin: 0px;
-  padding-top: 1.5rem;
-  line-height: normal;
-}
-.dark-mode-text {
-  color: $textColorDark !important;
-}
-.experience-text-date {
-  text-align: center;
-  color: $textColor;
-  font-size: 20px;
-  margin: 0px;
-  padding-top: 1rem;
+.experience-card-company {
+  margin: 0.25rem 0 0 0;
+  font-size: 18px;
   font-weight: 600;
 }
 
-.experience-text-desc {
-  text-align: center;
+.experience-card-date {
+  margin: 0.25rem 0 0 0;
+  color: $subTitle;
+  font-size: 14px;
 }
 
-.experience-text-details {
-  padding: 1.5rem;
-  margin-top: 2rem;
+.experience-card-desc {
+  margin: 1rem 0 0 0;
+  line-height: 1.6;
 }
 
-/* Media Query */
-
-@media (max-width: 1380px) {
-  .experience-text-role {
-    padding-top: 0.5rem;
-    font-size: 22px;
-  }
-  .experience-text-company {
-    font-size: 22px;
-  }
-  .experience-text-date {
-    font-size: 18px;
-  }
-  .experience-roundedimg {
-    width: 6.5rem;
-    height: 6.5rem;
-  }
+.experience-card-bullets {
+  margin: 0.75rem 0 0 1.25rem;
 }
 
 @media (max-width: 768px) {
-  .experience-text-role {
-    font-size: 22px;
+  .experience-card {
+    padding: 1.25rem;
   }
-  .experience-text-company {
-    font-size: 22px;
+  .experience-card-header {
+    align-items: flex-start;
   }
-  .experience-text-date {
-    font-size: 18px;
-  }
-  .experience-text-desc {
-    font-size: 16px;
+  .experience-card-role {
+    font-size: 20px;
   }
 }
